--- a/app-development/kotnet.kv
+++ b/app-development/kotnet.kv
@@ -13,9 +13,11 @@
         orientation: "vertical"
         
         Label:
-            text: "kotnetcli"
+            #text: "kotnet[b]cli[/b]"
+            text: "[font=DroidSansMono.ttf]kotnet[b]cli[/b][/font]"
             font_size: 60
             size_hint_y: 0.6
+            markup: True
     
         Label:
             text: "by Gijs Timmers and Jo Van Bulck"
@@ -74,9 +76,16 @@
                 font_size: 30
                 size_hint_y: 0.6
             
+            ProgressBar:
+                id: voortgangsbalk
+                max: 100
+                value: 0
+                size_hint_y: 0.2
+            
             Button:
                 id: afsluitknop
                 text: "Terug naar hoofdmenu"
+                font_size: 50
                 size_hint_y: 0.2
                 on_press: root.manager.current = 'menu'
                 
@@ -99,7 +108,7 @@
                 hint_text: "Gebruikersnaam"
                 font_size: 90
                 multiline: False
-                size_hint_y: 0.20
+                size_hint_y: 0.16666
                 input_type: "text"
                 keyboard_suggestions: False
                 password: False
@@ -109,9 +118,9 @@
             TextInput:
                 id: veld_wachtwoord
                 hint_text: "Wachtwoord"
-                font_size: 120
+                font_size: 90
                 multiline: False
-                size_hint_y: 0.20
+                size_hint_y: 0.16666
                 input_type: "text"
                 keyboard_suggestions: False
                 password: True
@@ -121,11 +130,13 @@
             Button:
                 id: opslaanvergeetknop
                 text: "Opslaan"
-                size_hint_y: 0.20
+                #size_hint_y: 0.20
+                size_hint_y: 0.33333
                 on_press: root.saveOrForget()
                 toestand: "opslaan"
             
             Button:
                 text: "Terug naar hoofdmenu"
-                size_hint_y: 0.4
+                size_hint_y: 0.33333
+                font_size: 50
                 on_press: root.manager.current = 'menu'
